Copy from uw-publish and modify for new DCS resource container format
Adding classes from uw-publish
Generating tex file
Formatting hyperlinks and setting up fonts

--- a/resources/tex/main_template.tex
+++ b/resources/tex/main_template.tex
@@ -105,7 +105,8 @@
     \setupfooter [state=stop]
     \startmakeup[storytitle]
     \blank
-    {\midaligned { \externalfigure[https://api.unfoldingword.org/obs/jpg/1/uWOBSverticallogo1200w.png] } }
+    % {\midaligned { \externalfigure[https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png] } }
+    {\midaligned { \externalfigure[/opt/obs/png/uWOBSverticallogo1200w.png] } }
     \blank
     \stopmakeup
     % Copyright and License Page
@@ -119,7 +120,8 @@
     \blank
 	{\pardir TLT \EN
     \setuphanging[location=left]
-    \starthanging{\externalfigure[https://api.unfoldingword.org/obs/jpg/1/checkinglevels/uW-Level<<<[checkinglevel]>>>-128px.png]}
+    % \starthanging{\externalfigure[https://unfoldingword.org/assets/img/uW-Level-<<<[checkinglevel]>>>-128px.png]}
+    \starthanging{\externalfigure[/opt/obs/png/uW-Level-<<<[checkinglevel]>>>-128px.png]}
     {{\bf Checking level <<<[checkinglevel]>>>}\blank
     { \em find out more at \goto{https://unfoldingword.org/quality}[url(https://unfoldingword.org/quality)]}}
     \stophanging
