Update uW OBS logo; use uW DockerHub account; add Makefile

--- a/resources/tex/main_template.tex
+++ b/resources/tex/main_template.tex
@@ -105,8 +105,8 @@
     \setupfooter [state=stop]
     \startmakeup[storytitle]
     \blank
-    % {\midaligned { \externalfigure[https://cdn.door43.org/obs/jpg/uWOBSverticallogo1200w.png] } }
-    {\midaligned { \externalfigure[/opt/obs/png/uWOBSverticallogo1200w.png] } }
+    % {\midaligned { \externalfigure[https://cdn.door43.org/obs/png/uW_OBS_Logo.png] } }
+    {\midaligned { \externalfigure[/opt/obs/png/uW_OBS_Logo.png] } }
     \blank
     \stopmakeup
     % Copyright and License Page
