Remove checking level indicators

--- a/resources/tex/main_template.tex
+++ b/resources/tex/main_template.tex
@@ -117,15 +117,15 @@
     %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  START-OF-FRONT-MATTER (About)
     ===FRONT.MATTER.ABOUT===
     %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  END-OF-FRONT-MATTER (About)
-    \blank
-	{\pardir TLT \EN
-    \setuphanging[location=left]
+    % \blank
+	% {\pardir TLT \EN
+    % \setuphanging[location=left]
     % \starthanging{\externalfigure[https://unfoldingword.org/assets/img/uW-Level-<<<[checkinglevel]>>>-128px.png]}
-    \starthanging{\externalfigure[/opt/obs/png/uW-Level-<<<[checkinglevel]>>>-128px.png]}
-    {{\bf Checking level <<<[checkinglevel]>>>}\blank
-    { \em find out more at \goto{https://unfoldingword.org/quality}[url(https://unfoldingword.org/quality)]}}
-    \stophanging
-	}
+    % \starthanging{\externalfigure[/opt/obs/png/uW-Level-<<<[checkinglevel]>>>-128px.png]}
+    % {{\bf Checking level <<<[checkinglevel]>>>}\blank
+    % { \em find out more at \goto{https://unfoldingword.org/quality}[url(https://unfoldingword.org/quality)]}}
+    % \stophanging
+	% }
     \blank[2em]
     %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~  START-OF-FRONT-MATTER (License)
     ===FRONT.MATTER.LICENSE===
