--- a/resources/tex/noto-am.tex
+++ b/resources/tex/noto-am.tex
@@ -1,8 +1,17 @@
-\definefallbackfamily [noto] [rm] [abyssinicasil] [range=0x1200-1399,0x2d80-0x2dde,0xab00-0xab2e]
-\definefallbackfamily [noto] [ss] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e]
-\definefallbackfamily [noto] [sl] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e, features=slanted]
-\definefallbackfamily [noto] [it] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e, features=slanted]
-\definefallbackfamily [noto] [rm] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17]
-\definefallbackfamily [noto] [ss] [NotoSansArmenian] [range=0x0531-0x058f,0xfb13-0xfb17]
-\definefallbackfamily [noto] [sl] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17, features=slanted]
-\definefallbackfamily [noto] [it] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17, features=slanted]
+% The following doesn't seem to work great (if at all)
+% \definefallbackfamily [noto] [rm] [abyssinicasil] [range=0x1200-1399,0x2d80-0x2dde,0xab00-0xab2e]
+% \definefallbackfamily [noto] [ss] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e]
+% \definefallbackfamily [noto] [sl] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e, features=slanted]
+% \definefallbackfamily [noto] [it] [abyssinicasil] [range=0x1200-0x1399,0x2d80-0x2dde,0xab00-0xab2e, features=slanted]
+% \definefallbackfamily [noto] [rm] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17]
+% \definefallbackfamily [noto] [ss] [NotoSansArmenian] [range=0x0531-0x058f,0xfb13-0xfb17]
+% \definefallbackfamily [noto] [sl] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17, features=slanted]
+% \definefallbackfamily [noto] [it] [NotoSerifArmenian] [range=0x0531-0x058f,0xfb13-0xfb17, features=slanted]
+
+% Adapted from noto-kn.tex
+%  and modified according to https://en.wikipedia.org/wiki/Amharic_script#Software
+%  and https://www.google.com/get/noto/#sans-ethi
+\definefallbackfamily [noto] [rm] [NotoSansEthiopic] [range=0x1200-0x137F]
+\definefallbackfamily [noto] [ss] [NotoSansEthiopic] [range=0x1200-0x137F]
+\definefallbackfamily [noto] [sl] [NotoSansEthiopic] [range=0x1200-0x137F]
+\definefallbackfamily [noto] [it] [NotoSansEthiopic] [range=0x1200-0x137F]
