--- a/resources/tex/noto-tl.tex
+++ b/resources/tex/noto-tl.tex
@@ -1,3 +1,4 @@
+% This looks like Tamil (ta) perhaps, but tl is Tagalog!
 \definefontfeature [arabicFEA] [mode=node,language=dflt,script=arab,init=yes,medi=yes,fina=yes,isol=yes,calt=yes,rlig=yes,tlig=yes,trep=yes,curs=yes,kern=yes,mark=yes]
 \definefallbackfamily [noto] [ss] [NotoNaskhArabic] [range=arabic,features=arabicFEA]
 \definefallbackfamily [noto] [rm] [NotoNaskhArabic] [range=arabic,features=arabicFEA]
