--- a/resources/tex/noto-fa.tex
+++ b/resources/tex/noto-fa.tex
@@ -1,2 +1,19 @@
 %\input obs/tex/noto-ar.tex
 \setuppagenumber[numberconversion=persiannumerals]
+
+% See https://en.wikipedia.org/wiki/Persian_alphabet
+%  and https://www.google.com/get/noto/#kufi-arab
+\definefallbackfamily [noto] [rm] [NotoKufiArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoKufiArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoKufiArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoKufiArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+
+\definefallbackfamily [noto] [rm] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+
+\definefallbackfamily [noto] [rm] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
