--- a/resources/tex/noto-ur.tex
+++ b/resources/tex/noto-ur.tex
@@ -8,8 +8,21 @@
 
 % Adapted from noto-kn.tex
 %  and modified according to https://en.wikipedia.org/wiki/Urdu_script#Unicode
+%  and https://en.wikipedia.org/wiki/Urdu_alphabet
 %  and https://www.google.com/get/noto/#sans-arab
-\definefallbackfamily [noto] [rm] [NotoSansArabic] [range=0x0600-0x06FF]
-\definefallbackfamily [noto] [ss] [NotoSansArabic] [range=0x0600-0x06FF]
-\definefallbackfamily [noto] [sl] [NotoSansArabic] [range=0x0600-0x06FF]
-\definefallbackfamily [noto] [it] [NotoSansArabic] [range=0x0600-0x06FF]
+%  and https://www.google.com/get/noto/#naskh-arab
+%  and https://www.google.com/get/noto/#nastaliq-aran
+\definefallbackfamily [noto] [rm] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoNastaliqUrdu] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+
+\definefallbackfamily [noto] [rm] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoNaskhArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+
+\definefallbackfamily [noto] [rm] [NotoSansArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [ss] [NotoSansArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [sl] [NotoSansArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
+\definefallbackfamily [noto] [it] [NotoSansArabic] [range=0x0600-0x06FF,0x0750-0x077F,0xFB50-0xFDFF,0xFE70-0xFEFF]
