--- a/resources/tex/calculate-vertical-need.tex
+++ b/resources/tex/calculate-vertical-need.tex
@@ -1,7 +1,8 @@
 % -*- coding: utf-8 -*-
 \useBaseSkip=\saveskip
 \useFontSZ=\savesize
-\refskip=24pt
+% Skip changed from 24 to 12, RJH as requested by JG 28 Apr 2020
+\refskip=12pt
 \toptxt={\LangTextDir $toptxt}
 \bottxt={\LangTextDir $bottxt}
 \reftxt={\LangTextDir $reftxt}
