--- a/resources/tex/main_template.tex
+++ b/resources/tex/main_template.tex
@@ -6,7 +6,7 @@
 \enableregime[utf]
 \definepapersize [Trade][width=5.25in, height=8in]
 \setuppapersize [Trade][Trade]
-\setuppagenumbering [location={footer,middle}, conversion=numbers, alternative=doublesided,strut=yes,style=\normal]
+\setuppagenumbering [location={footer,middle}, conversion=numbers, alternative=doublesided,strut=yes,style=\normal\tfx] % RJH added tfx
 \mainlanguage[<<<[language_id]>>>]
 %~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 %New Simple Fonts for NotoSans
@@ -28,7 +28,7 @@
 \setupspacing[packed]   % normal word space at the end of sentences
 \setupwhitespace[2.0pt]  % space between paragraphs
 \setupindenting[small, yes]
-\setuppagenumbering[location={footer,middle}, conversion=numbers,strut=yes,style=\normal]
+\setuppagenumbering[location={footer,middle}, conversion=numbers,strut=yes,style=\normal\tfx] % RJH added tfx
 \setupitemize[1][leftmargin=18.0pt,rightmargin=18.0pt]
 \setuplayout[width=fit,backspace=36pt,
     topspace=28pt,
@@ -126,7 +126,8 @@
     %\enableregime[utf]
     \setupbodyfont[<<<[fontface]>>>,<<<[fontstyle]>>>,<<<[tocsize]>>>]
     \setupinterlinespace[line=<<<[tocbaseline]>>>,top=0.0,bottom=0.0] % Line spacing
-    \setupfooter [state=start]
+    % RJH disabled footer on TOC, 28 Apr 2020 as per JG request
+    \setupfooter [state=stop]
     {\midaligned {\tfc{\WORD{<<<[toctitle]>>>}}}}
     %\bookmark[chapter]{Bible Stories}
     \placecontent[extras={<<<[tocperpage]>>>=page},alternative=c]
